--- a/catalog.html
+++ b/catalog.html
@@ -8,57 +8,57 @@
   </head>
 
   <body>
-    <header>
+    <header class="page-header">
       <nav>
         <a class="logo-link" href="index.html">
           <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
         </a>
         <form class="search-form" action="#" method="post">
           <label class="visually-hidden" for="search">Текст поиска</label>
-          <input type="search" id="search" placeholder="Текст поиска">
+          <input class="field-search field-catalog" type="search" id="search" placeholder="Текст поиска">
+          <button class="search-button" type="submit">Найти</button>
         </form>
-        <button class="search-button" type="submit">Найти</button>
         <ul class="user-interface-list">
           <li class="user-interface-item">
             <a class="navigation-user-link" href="#">
               Коля Петухов</a>
           </li>
           <li class="user-interface-item">
-            <a class="user-link exit">Выйти</a>
+            <a class="user-link user-link-exit">Выйти</a>
           </li>
           <li class="user-interface-item">
-            <a href="#">Сравнить</a>
+            <a class="user-link" href="#">Сравнить</a>
           </li>
           <li class="user-interface-item">
-            <a href="#"> Корзина</a>
+            <a class="user-link" href="#"> Корзина</a>
             <span class="goods-amount">2</span>
           </li>
         </ul>
         <section class="catalog-navigation-list">
           <h2 class="visually-hidden">Каталог товаров</h2>
-          <a class="link" href="catalog.html">Каталог товаров</a>
+          <a class="catalog-link" href="catalog.html">Каталог товаров</a>
           <ul class="catalog-navigation-items">
             <li class="catalog-navigation-link">
-              <a href="#">Виртуальная реальность</a>
+              <a class="navigation-link" href="#">Виртуальная реальность</a>
             </li>
             <li class="catalog-navigation-link">
-              <a href="#">Моноподы для cелфи</a>
+              <a class="navigation-link" href="#">Моноподы для cелфи</a>
             </li>
             <li class="catalog-navigation-link">
-              <a href="#">Экшн-камеры</a>
+              <a class="navigation-link" href="#">Экшн-камеры</a>
             </li>
           </ul>
           <ul class="catalog-navigation-items">
             <li class="catalog-navigation-link">
-              <a href="#">Фитнес-браслеты</a>
+              <a class="navigation-link" href="#">Фитнес-браслеты</a>
             </li>
             <li class="catalog-navigation-link">
-              <a href="#">Умные часы</a>
+              <a class="navigation-link" href="#">Умные часы</a>
             </li>
           </ul>
           <ul class="catalog-navigation-items">
             <li class="catalog-navigation-link">
-              <a href="#">Квадрокоптеры</a>
+              <a class="navigation-link" href="#">Квадрокоптеры</a>
             </li>
           </ul>
           <ul class="shop-services">
@@ -80,13 +80,13 @@
         <h1 class="breadcrumbs-title">Моноподы для селфи</h1>
         <ul class="breadcrumbs-list">
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-list" href="index.html">Главная</a>
+            <a class="breadcrumbs-link" href="index.html">Главная</a>
           </li>
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-list" href="catalog.html">Каталог товаров</a>
+            <a class="breadcrumbs-link" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-list" href="#">Моноподы для селфи</a>
+            <a class="breadcrumbs-link breadcrumbs-link-check" href="#">Моноподы для селфи</a>
           </li>
         </ul>
       </section>
@@ -198,7 +198,7 @@
             </a>
           </li>
           <li class="pagination-container-item">
-            <a class="pagination-link" href="#">1</a>
+            <a class="pagination-link pagination-link-current" href="#">1</a>
           </li>
           <li class="pagination-container-item">
             <a class="pagination-link" href="#">2</a>
@@ -220,12 +220,12 @@
         </ul>
       </div>
     </main>
-    <footer>
+    <footer class="footer-information">
       <a class="footer-logo" href="index.html">
         <img src="images/footer-logo.svg" width="145" height="36" alt="Логотип магазина Девайс.">
       </a>
       <h2 class="visually-hidden"> Адрес магазина Девайс</h2>
-      <p>Санкт-Петербург, набережная<br>
+      <p class="footer-adress">Санкт-Петербург, набережная<br>
         реки Карповки, 5, литера П.</p>
       <ul class="footer-shop-services">
         <li class="footer-shop-services-list">
@@ -238,12 +238,12 @@
           <a class="footer-shop-services-link" href="#">Контакты</a>
         </li>
       </ul>
-      <a href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="footer-adress footer-adress-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <section class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
-        <ul>
-          <li>
-            <a href="https://t.me/htmlacademy">
+        <ul class="social-list">
+          <li class="social-list-item">
+            <a class="social-item-link" href="https://t.me/htmlacademy">
               <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_26119_1311)">
                   <path
@@ -259,8 +259,8 @@
               <span class="visually-hidden">Телеграмм.</span>
             </a>
           </li>
-          <li>
-            <a href="https://www.youtube.com/user/htmlacademyru">
+          <li class="social-list-item">
+            <a class="social-item-link" href="https://www.youtube.com/user/htmlacademyru">
               <svg width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_26119_1316)">
                   <path
@@ -276,8 +276,8 @@
               <span class="visually-hidden">Youtube.</span>
             </a>
           </li>
-          <li>
-            <a href="https://twitter.com/htmlacademy_ru">
+          <li class="social-list-item">
+            <a class="social-item-link" href="https://twitter.com/htmlacademy_ru">
               <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M9.7 0.155143C11.2 -0.344857 12.3 0.455143 12.9 1.25514C13.4 1.05514 14 0.855143 14.6 0.655143C14.6 1.45514 14.1 2.05514 13.8 2.25514C14.5 2.45514 15 1.85514 15 1.85514C14.9 2.75514 14.1 3.55514 13.6 3.75514C13.4 10.0551 10.8 14.1551 4.7 14.0551C4.2 14.0551 4.8 14.0551 4.3 14.0551C4 14.0551 0.6 13.6551 0 12.2551C2 12.4551 3.4 11.8551 4.1 11.1551C3.3 10.8551 1.7 10.7551 1.5 8.35514C1.8 8.55514 2 8.65514 2.6 8.55514C1.5 7.75514 0.3 7.05514 0.4 5.05514C0.7 5.35514 1.3 5.55514 1.6 5.45514C1 5.25514 -0.2 2.35514 0.8 0.855143C2.4 2.55514 4.1 4.25514 7.1 4.35514C7.3 2.25514 8.1 0.855143 9.7 0.155143Z"
