--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="page-header">
       <h1 class="visually-hidden"> Интернет-магазин: Девайс</h1>
       <nav>
         <a class="logo-link" href="#">
@@ -16,47 +16,46 @@
         </a>
         <form class="search-form" action="#" method="post">
           <label class="visually-hidden" for="search">Поиск по сайту</label>
-          <input type="search" id="search" placeholder="Поиск по сайту">
+          <input class="field-search" type="search" id="search" placeholder="Поиск по сайту">
+          <button class="search-button" type="submit">Найти</button>
         </form>
-        <button class="search-button" type="submit">Найти</button>
-
         <ul class="user-interface-list">
           <li class="user-interface-item">
             <a class="user-link enter" href="#">Войти</a>
           </li>
           <li class="user-interface-item">
-            <a href="#">Сравнить</a>
+            <a class="user-link" href="#">Сравнить</a>
           </li>
           <li class="user-interface-item">
-            <a href="#"> Корзина</a>
+            <a class="user-link" href="#"> Корзина</a>
             <span class="goods-amount">2</span>
           </li>
         </ul>
         <section class="catalog-navigation-list">
           <h2 class="visually-hidden">Каталог товаров</h2>
-          <a class="link" href="catalog.html">Каталог товаров</a>
+          <a class="catalog-link" href="#">Каталог товаров</a>
           <ul class="catalog-navigation-items">
             <li class="catalog-navigation-link">
-              <a href="#">Виртуальная реальность</a>
+              <a class="navigation-link" href="#">Виртуальная реальность</a>
             </li>
             <li class="catalog-navigation-link">
-              <a href="#">Моноподы для cелфи</a>
+              <a class="navigation-link" href="catalog.html">Моноподы для cелфи</a>
             </li>
             <li class="catalog-navigation-link">
-              <a href="#">Экшн-камеры</a>
+              <a class="navigation-link" href="#">Экшн-камеры</a>
             </li>
           </ul>
           <ul class="catalog-navigation-items">
             <li class="catalog-navigation-link">
-              <a href="#">Фитнес-браслеты</a>
+              <a class="navigation-link" href="#">Фитнес-браслеты</a>
             </li>
             <li class="catalog-navigation-link">
-              <a href="#">Умные часы</a>
+              <a class="navigation-link" href="#">Умные часы</a>
             </li>
           </ul>
           <ul class="catalog-navigation-items">
             <li class="catalog-navigation-link">
-              <a href="#">Квадрокоптеры</a>
+              <a class="navigation-link" href="#">Квадрокоптеры</a>
             </li>
           </ul>
           <ul class="shop-services">
@@ -86,7 +85,7 @@
             замаскированным под стандартную
             камеру.
             </p>
-            <a class="sliders-button" href="#">Подробнее</a>
+            <a class="button sliders-button" href="#">Подробнее</a>
             <div class="sliders-info-items">
               <dl class="sliders-details-list">
                 <dt class="sliders-details">800 м</dt>
@@ -104,7 +103,7 @@
             <h3 class="sliders-title">Худеем<br>правильно!</h3>
             <p class="sliders-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
               соблюдать диету.</p>
-            <a class="sliders-button" href="#">Подробнее</a>
+            <a class="button sliders-button" href="#">Подробнее</a>
             <div class="sliders-info-items">
               <dl class="sliders-details-list">
                 <dt class="sliders-details">48 часов</dt>
@@ -120,7 +119,7 @@
               метров длиной и весом
               всего
               5 кг.</p>
-            <a class="sliders-button" href="#">Подробнее</a>
+            <a class="button sliders-button" href="#">Подробнее</a>
             <div class="sliders-info-items">
               <dl class="sliders-details-list">
                 <dt class="sliders-details">8,5 м</dt>
@@ -168,7 +167,7 @@
         <h2 class="visually-hidden">Условия доставки, условия гарантий и кредитования</h2>
         <ul class="services-list">
           <li class="services-item">
-            <a class="services-link" href="#">Доставка</a>
+            <a class="services-link services-link-current" href="#">Доставка</a>
           </li>
           <li class="services-item">
             <a class="services-link" href="#">Гарантия</a>
@@ -185,13 +184,13 @@
               мы неплохо заработаем, поднимая его на ваш этаж.</p>
           </li>
           <li class="info-list">
-            <h3 class="warranty-title">Гарантия</h3>
+            <h3 class="delivery-title">Гарантия</h3>
             <p class="info-text">Если из-за возгорания купленного у нас товара у вас
               сгорит дом — не переживайте, мы выдадим вам новый.
               Товар, не дом, конечно же.</p>
           </li>
           <li class="info-list">
-            <h3 class="credit-title">Кредит</h3>
+            <h3 class="delivery-title">Кредит</h3>
             <p class="info-text">Залезть в долговую яму стало проще!
               Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.
             </p>
@@ -201,14 +200,14 @@
 
       <section class="delivery-order">
         <h2 class="visually-hidden">Преимущество нашей доставки</h2>
-        <a>Доставим редкий товар под заказ
+        <a class="delivery-order-text">Доставим редкий товар под заказ
           <span class="visually-hidden">Информация</span>
         </a>
       </section>
 
       <div class="information-container">
         <section class="about-us">
-          <h2 class="about-us-title">О нас</h2>
+          <h2 class="title about-us-title">О нас</h2>
           <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика,<br>
             который есть в каждом из нас.
           </p>
@@ -230,7 +229,7 @@
         </section>
 
         <section class="contacts-information">
-          <h2 class="contacts-title">Контакты</h2>
+          <h2 class="title contacts-title">Контакты</h2>
           <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. <br>
             Заодно сможете проверить работоспособность покупки. </p>
           <h3 class="name-shop">Интернет-магазин «Девайс»</h3>
@@ -243,24 +242,24 @@
       </div>
 
       <section class="newsletter">
-        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <h2 class="title newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-text">Еженедельный дайджест с обзорами новинок, длительными
           тест-драйвами, распаковками,a также акции, спецпредложения и вот это вот всё.
         </p>
         <form action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="email">email</label>
-          <input placeholder="Ваш e-mail" type="email" id="email" required>
+          <input class="newsletter-label" placeholder="Ваш e-mail" type="email" id="email" required>
+          <button class="button-newsletter" type="submit">Подписаться</button>
         </form>
-        <button class="button-newsletter" type="submit">Подписаться</button>
         <p class="newsletter-tick">Это бесплатно</p>
       </section>
     </main>
-    <footer>
+    <footer class="footer-information">
       <a class="footer-logo" href="#">
         <img src="images/footer-logo.svg" width="145" height="36" alt="Логотип магазина Девайс.">
       </a>
       <h2 class="visually-hidden"> Адрес магазина Девайс</h2>
-      <p class="footer-adress-text">Санкт-Петербург, набережная<br>
+      <p class="footer-adress">Санкт-Петербург, набережная<br>
         реки Карповки, 5, литера П.</p>
       <ul class="footer-shop-services">
         <li class="footer-shop-services-list">
@@ -273,12 +272,12 @@
           <a class="footer-shop-services-link" href="#">Контакты</a>
         </li>
       </ul>
-      <a href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="footer-adress footer-adress-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <section class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
-        <ul>
-          <li>
-            <a href="https://t.me/htmlacademy">
+        <ul class="social-list">
+          <li class="social-list-item">
+            <a class="social-item-link" href="https://t.me/htmlacademy">
               <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_26119_1311)">
                   <path
@@ -294,8 +293,8 @@
               <span class="visually-hidden">Телеграмм.</span>
             </a>
           </li>
-          <li>
-            <a href="https://www.youtube.com/user/htmlacademyru">
+          <li class="social-list-item">
+            <a class="social-item-link" href="https://www.youtube.com/user/htmlacademyru">
               <svg width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_26119_1316)">
                   <path
@@ -311,8 +310,8 @@
               <span class="visually-hidden">Youtube.</span>
             </a>
           </li>
-          <li>
-            <a href="https://twitter.com/htmlacademy_ru">
+          <li class="social-list-item">
+            <a class="social-item-link" href="https://twitter.com/htmlacademy_ru">
               <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M9.7 0.155143C11.2 -0.344857 12.3 0.455143 12.9 1.25514C13.4 1.05514 14 0.855143 14.6 0.655143C14.6 1.45514 14.1 2.05514 13.8 2.25514C14.5 2.45514 15 1.85514 15 1.85514C14.9 2.75514 14.1 3.55514 13.6 3.75514C13.4 10.0551 10.8 14.1551 4.7 14.0551C4.2 14.0551 4.8 14.0551 4.3 14.0551C4 14.0551 0.6 13.6551 0 12.2551C2 12.4551 3.4 11.8551 4.1 11.1551C3.3 10.8551 1.7 10.7551 1.5 8.35514C1.8 8.55514 2 8.65514 2.6 8.55514C1.5 7.75514 0.3 7.05514 0.4 5.05514C0.7 5.35514 1.3 5.55514 1.6 5.45514C1 5.25514 -0.2 2.35514 0.8 0.855143C2.4 2.55514 4.1 4.25514 7.1 4.35514C7.3 2.25514 8.1 0.855143 9.7 0.155143Z"
